added content for specific sites and images for website

--- a/site-plan.html
+++ b/site-plan.html
@@ -120,30 +120,35 @@
       </h2>
       <h3>Home page</h3>
       <p>
-        [Written copy for the home page here]
+        My homepage will have brief descriptions for what the site does. It will introduce my games and explain a little bit about how each one works. The focus of the page will be a graphic of three different doors that link to the games. There are 3 separate games, because the three branches of my program are all too large individually. So, I split the branches into three separate games, and you can choose what game to play from the main menu. Each game has unique endings and choices, but they are not all the same difficulty. Each door has a hidden difficulty that can be seen if the user checks the guide page. 
       </p>
       <p>Images for the Home page</p>
-        <img src="#" alt="image for homepage">
-        <img src="#" alt="image for homepage">
-
+        <img src="styles/images/threedoorsforgame.webp" alt="Three stone archways">
+        <a href="https://www.freepik.com/free-vector/ancient-architecture-with-arches-torches_22444977.htm#from_view=detail_alsolike">Image by upklyak on Freepik</a>
+<!-- Convert images to .webp (highly optimized) or .svg (scales well) -->
       </ul>
-      <h3>[Page 2]</h3>
+      <h3>User Interface</h3>
       <p>
-        [Written copy for the Page 2 here]
+        Page 2 will be the interface for the game that will be on any page that is used to interact with the game. There will be less text on this page, but the page will be the UI for the game. So, there will be icons for items in the game displayed along the bottom right of the screen, and there will be a number displaying how many stages the user has completed on the bottom left of the screen. There will also be a section on the side that allows you to choose when to use items. Not every item can always be used, but using the items can help increase your chances of success (or in specific situations, get you killed)
       </p>
       <p>Images for the Page 2</p>
-        <img src="#" alt="image for page">
-        <img src="#" alt="image for page">
+        <img src="styles/images/crossbow.png" alt="crossbow graphic">
+        <img src="styles/images/sword.png" alt="sword graphic">
 
       </ul>
-      <h3>[Page 3]</h3>
+      <h3>Dictionary</h3>
       <p>
-        [Written copy for the Page 3 here]
+        Page 3 will be a sort of dictionary, explaining all the items, mechanics, and interactions that the user will need to understand the game.  Every icon used in the game will be defined here, and the user will always have access to it to ensure that it is not confusing. This is also where an FAQ at the bottom. (once site is up I will have to get feedback to generate a frequently asked questions page)
       </p>
       <p>Images for the Page 3</p>
-        <img src="#" alt="image for page3">
-        <img src="#" alt="image for page3">
-
+        <img src="styles/images/scroll.png" alt="scroll icon">
+        <a href="https://www.flaticon.com/free-icons/diploma" title="diploma icons">Diploma icons created by Freepik - Flaticon</a>
+      </ul>
+      </ul>
+      <h3>Hidden Page</h3>
+      <p>
+        The hidden page is there to display a game over message. It will tell you how you lost, an image to represent your shame, and how far you got. It will have a link back to the main page to restart. 
+      </p>
       </ul>
       <hr>
       <h2>
@@ -169,6 +174,12 @@
         [Any additional details about page 3 that the wireframe does not make clear]
       </p>
       <img src="#" alt="page 3 wireframe">
+
+      <h3>Hidden Page</h3>
+      <p>         
+        [Any additional details about page 3 that the wireframe does not make clear]
+      </p>
+      <img src="#" alt="Hidden Page wireframe">
     </main>
   </body>
 
