--- a/site-plan.html
+++ b/site-plan.html
@@ -57,10 +57,10 @@
       <!-- Choose a font for your paragraphs (body copy) and headlines. What font(s) have you chosen? Why did you choose what you did?  Make sure to review the list of web safe fonts at W3Schools.org as a starting point.  Think also about which of your colors above you might use for background and font colors. -->
 
       <h4>
-        Heading Font: [Font Name here]  <!-- change this -->
+        Heading Font: Cinzel  <!-- change this -->
       </h4>
       <h4>
-        Paragraph Font: [Font Name here]  <!-- change this -->
+        Paragraph Font: Merriweather  <!-- change this -->
       </h4>
       <h3>
         Normal paragraph example
@@ -95,10 +95,13 @@
           Home
         </div>
         <div class="sm-page2">
-          [Page2] <!-- change this -->
+          User interface <!-- change this -->
         </div>
         <div class="sm-page3">
-          [Page3]  <!-- change this -->
+          Dictionary  <!-- change this -->
+        </div>
+        <div class="sm-hiddenpage">
+          Hidden page <!-- This link will not be on the rest of the site, it will only be on the plan -->
         </div>
 
         <div class="top">
@@ -125,6 +128,9 @@
       <p>Images for the Home page</p>
         <img src="styles/images/threedoorsforgame.webp" alt="Three stone archways">
         <a href="https://www.freepik.com/free-vector/ancient-architecture-with-arches-torches_22444977.htm#from_view=detail_alsolike">Image by upklyak on Freepik</a>
+        <img src="" alt="Sun shaped rune">
+        <img src="" alt="Moon shaped rune">
+        <img src="" alt="Star shaped rune">
 <!-- Convert images to .webp (highly optimized) or .svg (scales well) -->
       </ul>
       <h3>User Interface</h3>
@@ -143,12 +149,15 @@
       <p>Images for the Page 3</p>
         <img src="styles/images/scroll.png" alt="scroll icon">
         <a href="https://www.flaticon.com/free-icons/diploma" title="diploma icons">Diploma icons created by Freepik - Flaticon</a>
+        <img src="" alt="Shelves full of books">
       </ul>
       </ul>
       <h3>Hidden Page</h3>
       <p>
         The hidden page is there to display a game over message. It will tell you how you lost, an image to represent your shame, and how far you got. It will have a link back to the main page to restart. 
       </p>
+        <img src="" alt="Game over graphic">
+        <img src="" alt="Example image">
       </ul>
       <hr>
       <h2>
