added pictures to site plan

--- a/site-plan.html
+++ b/site-plan.html
@@ -20,7 +20,7 @@
       <hr>
       <h2>Overview</h2>
       <h3>Purpose</h3>
-      <p>The purpose of this website is to create a website to host an adventure game that runs on python..</p>  <!-- change this -->
+      <p>The purpose of this website is to create a website to host an adventure game that runs on python.</p>  <!-- change this -->
 
 
       <h3>Audience</h3>
@@ -128,9 +128,9 @@
       <p>Images for the Home page</p>
         <img src="styles/images/threedoorsforgame.webp" alt="Three stone archways">
         <a href="https://www.freepik.com/free-vector/ancient-architecture-with-arches-torches_22444977.htm#from_view=detail_alsolike">Image by upklyak on Freepik</a>
-        <img src="" alt="Sun shaped rune">
-        <img src="" alt="Moon shaped rune">
-        <img src="" alt="Star shaped rune">
+        <img src="styles/images/sun.jpg" alt="Sun shaped symbol">
+        <img src="styles/images/moon.png" alt="Moon shaped symbol">
+        <img src="styles/images/Runes.gif" alt="Star shaped symbol">
 <!-- Convert images to .webp (highly optimized) or .svg (scales well) -->
       </ul>
       <h3>User Interface</h3>
@@ -138,8 +138,9 @@
         Page 2 will be the interface for the game that will be on any page that is used to interact with the game. There will be less text on this page, but the page will be the UI for the game. So, there will be icons for items in the game displayed along the bottom right of the screen, and there will be a number displaying how many stages the user has completed on the bottom left of the screen. There will also be a section on the side that allows you to choose when to use items. Not every item can always be used, but using the items can help increase your chances of success (or in specific situations, get you killed)
       </p>
       <p>Images for the Page 2</p>
-        <img src="styles/images/crossbow.png" alt="crossbow graphic">
-        <img src="styles/images/sword.png" alt="sword graphic">
+        <img src="styles/images/crossbow.png" alt="Crossbow graphic">
+        <img src="styles/images/bettersword.png" alt="Sword graphic">
+        <img src="styles/images/dagger.png" alt="Dagger graphic">
 
       </ul>
       <h3>Dictionary</h3>
