added wireframes and edited descriptions

--- a/site-plan.html
+++ b/site-plan.html
@@ -20,7 +20,7 @@
       <hr>
       <h2>Overview</h2>
       <h3>Purpose</h3>
-      <p>The purpose of this website is to create a website to host an adventure game that runs on python.</p>  <!-- change this -->
+      <p>The purpose of this website is to create a website to host a word based adventure game.</p>  <!-- change this -->
 
 
       <h3>Audience</h3>
@@ -126,11 +126,11 @@
         My homepage will have brief descriptions for what the site does. It will introduce my games and explain a little bit about how each one works. The focus of the page will be a graphic of three different doors that link to the games. There are 3 separate games, because the three branches of my program are all too large individually. So, I split the branches into three separate games, and you can choose what game to play from the main menu. Each game has unique endings and choices, but they are not all the same difficulty. Each door has a hidden difficulty that can be seen if the user checks the guide page. 
       </p>
       <p>Images for the Home page</p>
-        <img src="styles/images/threedoorsforgame.webp" alt="Three stone archways">
+        <img src="styles/images/updateddoorway.png" alt="Three stone archways">
         <a href="https://www.freepik.com/free-vector/ancient-architecture-with-arches-torches_22444977.htm#from_view=detail_alsolike">Image by upklyak on Freepik</a>
-        <img src="styles/images/sun.jpg" alt="Sun shaped symbol">
-        <img src="styles/images/moon.png" alt="Moon shaped symbol">
-        <img src="styles/images/Runes.gif" alt="Star shaped symbol">
+        <img src="styles/images/sun.gif" alt="Sun shaped symbol">
+        <img src="styles/images/moon.gif" alt="Moon shaped symbol">
+        <img src="styles/images/vortex.gif" alt="A pulsing red vortex">
 <!-- Convert images to .webp (highly optimized) or .svg (scales well) -->
       </ul>
       <h3>User Interface</h3>
@@ -157,8 +157,6 @@
       <p>
         The hidden page is there to display a game over message. It will tell you how you lost, an image to represent your shame, and how far you got. It will have a link back to the main page to restart. 
       </p>
-        <img src="" alt="Game over graphic">
-        <img src="" alt="Example image">
       </ul>
       <hr>
       <h2>
@@ -166,30 +164,32 @@
       </h2>
       <p>
         Create three wireframes for your site. One for each page and list them here</p>
-
+      <p>
+        This is the link to the canva page where the wireframes were designed. I have designed every image used on the website using Canva Icon designer and Whiteboards.</p>
+      <a href="https://www.canva.com/design/DAGIySpIe54/zM07SxVuprZLLtO-Wwkd5A/edit?utm_content=DAGIySpIe54&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton" target="_blank"> Canva Design </a> 
       <h3>Home</h3>
       <p>         
-        [Any additional details about home that the wireframe does not make clear]
+        The header is underneath an image to add to the imersion of delving underground.
       </p>
-      <img src="#" alt="home page wireframe">
+      <img src="styles/images/home-wireframe.png" alt="home page wireframe">
 
-      <h3>[Page 2]</h3>
+      <h3>User Interface</h3>
       <p>         
-        [Any additional details about page 2 that the wireframe does not make clear]
+        This will appear to have zoomed in on one of the doorways, giving acess to the game.
       </p>
-      <img src="#" alt="page 2 wireframe">
+      <img src="styles/images/ui-wireframe.png" alt="User interface wireframe">
 
-      <h3>[Page 3]</h3>
+      <h3>Index</h3>
       <p>         
-        [Any additional details about page 3 that the wireframe does not make clear]
+        This is where there will be dropdown menus with all of the information related to the game
       </p>
-      <img src="#" alt="page 3 wireframe">
+      <img src="styles/images/index-wireframe.png" alt="Index wireframe">
 
       <h3>Hidden Page</h3>
       <p>         
-        [Any additional details about page 3 that the wireframe does not make clear]
+        Depending of the outcome of the game, a different game over page will display based on if the player survives.
       </p>
-      <img src="#" alt="Hidden Page wireframe">
+      <img src="styles/images/gameover-wireframe.png" alt="Hidden Page wireframe">
     </main>
   </body>
 
