got rid of the gifs

--- a/site-plan.html
+++ b/site-plan.html
@@ -128,9 +128,9 @@
       <p>Images for the Home page</p>
         <img src="styles/images/updateddoorway.png" alt="Three stone archways">
         <a href="https://www.freepik.com/free-vector/ancient-architecture-with-arches-torches_22444977.htm#from_view=detail_alsolike">Image by upklyak on Freepik</a>
-        <img src="styles/images/sun.gif" alt="Sun shaped symbol">
-        <img src="styles/images/moon.gif" alt="Moon shaped symbol">
-        <img src="styles/images/vortex.gif" alt="A pulsing red vortex">
+        <img src="styles/images/sun.jpg" alt="Sun shaped symbol">
+        <img src="styles/images/moon.jpg" alt="Moon shaped symbol">
+        <img src="styles/images/void.jpg" alt="A black and red swirl">
 <!-- Convert images to .webp (highly optimized) or .svg (scales well) -->
       </ul>
       <h3>User Interface</h3>
