--- a/site-plan.html
+++ b/site-plan.html
@@ -4,6 +4,7 @@
   <head>
     <meta charset="utf-8">
     <title>Game Nexus Site Plan</title>
+    <link rel="icon" type="image/svg+xml" href="styles/images/favicon-logo3.svg">
     <link type="text/css" rel="stylesheet" href="styles/site-plan.css">
   </head>
 
@@ -30,7 +31,7 @@
       <h2>Branding</h2>
       <h3>Website Logo</h3>
       <!-- Replace this with some sort of logo for your site.  A logo can be as simple as the name of your site in a nice font :) -->
-      <img src='styles/images/gamenexuslogo.png' alt="Game Nexus logo">
+      <img src='styles/images/logo.svg' alt="Game Nexus logo">
       <hr>
       <h2>
         Style Guide
